[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uncalled_elazarg"
version = "0.1.7"
authors = [
  { name="Elazar Gershuni", email="elazarg@gmail.com" },
]
description = "Find unused functions in Python projects"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/elazarg/uncalled"
"Bug Tracker" = "ttps://github.com/elazarg/uncalled/issues"

[project.scripts]
uncalled = 'uncalled.__main__:main'
